--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "logging": "~2",
     "xml2js": "~0.2.8",
     "request": "~2",
-    "q": "~0.9.7"
+    "q": "~0.9.7",
+    "lodash": "~2.2.1"
   },
   "main": "lib/jobvite.js",
   "engines": {
