--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
-    "name": "jobvite",
-    "version": "0.2.4",
-    "description": "Access job listings and reports from Jobvite.",
-    "homepage": "http://github.com/dylang/jobvite",
-    "author": "Dylan Greene <dylang@gmail.com>",
-    "contributors": [
-        "Dylan Greene <dylang@gmail.com>"
-    ],
-    "repository":
+  "name": "jobvite",
+  "version": "0.2.8",
+  "description": "Access job listings and reports from Jobvite.",
+  "homepage": "http://github.com/dylang/jobvite",
+  "author": {
+    "name": "Dylan Greene",
+    "email": "dylang@gmail.com"
+  },
+  "contributors": [
     {
-        "type": "git",
-        "url": "http://github.com/dylang/jobvite"
-    },
-    "bugs":
+      "name": "Dylan Greene",
+      "email": "dylang@gmail.com"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/dylang/jobvite"
+  },
+  "bugs": {
+    "mail": "dylang@gmail.com",
+    "url": "http://github.com/dylang/jobvite/issues"
+  },
+  "dependencies": {
+    "logging": "*",
+    "xml2js": "*",
+    "request": "*"
+  },
+  "main": "lib/jobvite.js",
+  "engines": {
+    "node": ">=0.4.0"
+  },
+  "licenses": [
     {
-        "mail": "dylang@gmail.com",
-        "url": "http://github.com/dylang/jobvite/issues"
-    },
-    "dependencies":
-    {
-        "logging": "*",
-        "xml2js": "*",
-        "request": "*"
-
-    },
-    "main": "lib/jobvite.js",
-    "engines": { "node": ">=0.4.0" },
-    "licenses" :
-    [
-        { "type" : "MIT", "url" : "http://github.com/isaacs/npm/raw/master/LICENSE" }
-    ]
+      "type": "MIT",
+      "url": "http://github.com/isaacs/npm/raw/master/LICENSE"
+    }
+  ],
+  "readme": "# Jobvite Node API\n\n  Node-based API for job listings and reports in the Jobvite service.\n\n## DISCLAIMER\n\n  The author of this package is not an employee or partner of Jobvite.\n  This is a 3rd party package that you should use at your own risk.\n\n## See it in action\n\n  [http://www.opowerjobs.com](http://www.opowerjobs.com)\n\n## Documentation\n\n   * TBD...  Yeah the most important part, I know.\n\n## Features\n\n  * Job listings\n  * Report data\n\n",
+  "readmeFilename": "Readme.md",
+  "_id": "jobvite@0.2.8",
+  "_from": "jobvite@~0.2.8"
 }
