--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
   "readme": "# Jobvite Node API\n\n  Node-based API for job listings and reports in the Jobvite service.\n\n## DISCLAIMER\n\n  The author of this package is not an employee or partner of Jobvite.\n  This is a 3rd party package that you should use at your own risk.\n\n## See it in action\n\n  [http://www.opowerjobs.com](http://www.opowerjobs.com)\n\n## Documentation\n\n   * TBD...  Yeah the most important part, I know.\n\n## Features\n\n  * Job listings\n  * Report data\n\n",
   "readmeFilename": "Readme.md",
   "_id": "jobvite@0.2.8",
-  "_from": "jobvite@~0.2.8"
+  "_from": "jobvite@~0.2.8",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-mocha-test": "~0.7.0",
+    "grunt-contrib-jshint": "~0.7.0"
+  }
 }
