--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "request": "*",
     "q": "~0.9.7",
     "lodash": "~2.2.1",
-    "cheerio": "~0.12.3"
+    "cheerio": "~0.12.3",
+    "traverse": "~0.6.6"
   },
   "main": "lib/jobvite.js",
   "engines": {
