--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "q": "~0.9.7",
     "lodash": "~2.2.1",
     "cheerio": "~0.12.3",
-    "traverse": "~0.6.6"
+    "traverse": "~0.6.6",
+    "chalk": "~0.3.0"
   },
   "main": "lib/jobvite.js",
   "engines": {
