--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "~2.2.1",
     "cheerio": "~0.12.3",
     "traverse": "~0.6.6",
-    "chalk": "~0.3.0"
+    "chalk": "~0.3.0",
+    "mkdirp": "~0.3.5"
   },
   "main": "lib/jobvite.js",
   "engines": {
